--- a/app/src/main/res/layout/activity_sign_up_otp_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_otp_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".SignUpOtpScreen">
+    tools:context=".Activities.SignUpOtpScreen">
 
     <TextView
         android:layout_width="wrap_content"
